--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="edu.fje.clot.sudoku.GameActivity"
+            android:configChanges="orientation|screenSize"
+            android:label="@string/gamename" >
+
+
+        </activity>
     </application>
 
 </manifest>
