Hace las puntuaciones segun si la aciertas o no

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="edu.fje.clot.sudoku">
 
     <application
+        android:name=".globals.SudokuApplication"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
